fix: removed unwanted styles and autoalign prop

--- a/packages/styles/scss/components/menu/_menu.scss
+++ b/packages/styles/scss/components/menu/_menu.scss
@@ -44,7 +44,6 @@
   }
 
   .#{$prefix}--menu--open {
-    inline-size: fit-content;
     visibility: visible;
 
     &:focus {
